--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -1,9 +1,9 @@
 .likeBtn {
-    background-color: red;
     width: 300px;
-    margin: 0px 0px 10px 0px;
-    text-align: left;
-    outline: none
+    margin: 0px 0px 2px 0px;
+    text-align: center;
+    outline: none;
+    font-size: 20px;
 }
 
 .pictureFact {
@@ -24,7 +24,7 @@
 }
 
 body {
-    background-color: rgba(70, 50, 1, 0.863)
+    background-color: rgb(10, 10, 104);
 }
 
 h1 {
@@ -42,6 +42,10 @@ h1 {
   margin: 5px;
 }
 
-/* .container-fluid {
-    background-color: skyblue;
-} */
+.stats {
+    background-color: #337ab7;
+    width: 300px;
+    text-align: center;
+    font-size: 20px;
+    color: white;
+}
