--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -1,6 +1,6 @@
-.likeBtn {
+.likeBtn, .btn-primary {
     width: 300px;
-    margin: 0px 0px 2px 0px;
+    margin: 2px 0px 2px 0px;
     text-align: center;
     outline: none;
     font-size: 20px;
@@ -44,8 +44,19 @@ h1 {
 
 .stats {
     background-color: #337ab7;
-    width: 300px;
+    width: 200px;
     text-align: center;
     font-size: 20px;
     color: white;
+}
+
+input {
+    width: 300px;
+}
+
+.picComment {
+    color: white;
+    background-color: #6c9cc2;
+    margin: 3px 0px 0px 0px;
+    width: 300px;
 }
