--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -1,4 +1,5 @@
-.likeBtn, .btn-primary {
+.likeBtn,
+.btn-primary {
     width: 300px;
     margin: 2px 0px 2px 0px;
     text-align: center;
@@ -6,7 +7,7 @@
     font-size: 20px;
 }
 
-.pictureFact {
+.pictureDesc {
     width: 300px;
     height: 300px;
     background-color: maroon;
@@ -39,7 +40,7 @@ h1 {
 }
 
 .galSect {
-  margin: 5px;
+    margin: 5px;
 }
 
 .stats {
